# GPUMonitor

./: .gitignore  CMakeLists.txt  README.md
GPUMonitorApp/: CMakeLists.txt  qmlSources.qrc
amdGpuLib/: CMakeLists.txt
app/: CMakeLists.txt  Main.qml  main.cpp  qmlSources.qrc
app/components/: PropertyDisplay.qml
interfaces/: CMakeLists.txt
lib/: CMakeLists.txt  gpumonitorlib.cpp  gpumonitorlib.h
src/: CMakeLists.txt
src/GPULib/: CMakeLists.txt  gpumonitorlib.h
src/GPUMonitorApp/: CMakeLists.txt
src/amdGpuLib/: CMakeLists.txt  amdgpusource.cpp  amdgpusource.h
src/interfaces/: CMakeLists.txt
